Add a test of the statistics written in the file (HashStatMap)
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@213950 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/ACSLaser/laser-core/test/Makefile
+++ b/LGPL/CommonSoftware/ACSLaser/laser-core/test/Makefile
@@ -96,7 +96,8 @@ SCRIPTS     = lasercoreTATPrologue \
             testIDLSendAlarm \
 			testRRWithDefaultFM \
 			testRRWithRegExp \
-			testStatistics
+			testStatistics \
+			testStatisticsOnFile
 
 SCRIPTS_L       =
 
