ICT-3705: Removed package alma.acs.eventbrowser.model because it has been moved to the module nsStatisticsService. This module now also depends on the nsStatisticsService module.
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@213971 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsGUIs/eventGUI/src/project.properties
+++ b/LGPL/CommonSoftware/acsGUIs/eventGUI/src/project.properties
@@ -69,4 +69,5 @@ acs.jars.required  = jacorb-omgapi.jar \
  repeatGuard.jar \
  slf4j-acs.jar \
  slf4j-api-1.7.5.jar \
- xalan.jar
+ xalan.jar \
+ nsStatisticsService.jar
