ICT-3705: Added a script named nsStatistics to execute the nsStatisticsService tool. Renamed test files. Deleted needless code inside bin folder.
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@214010 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/nsStatisticsService/test/Makefile
+++ b/LGPL/CommonSoftware/nsStatisticsService/test/Makefile
@@ -63,7 +63,7 @@ lllll_OBJECTS   =
 #
 # Scripts (public and local)
 # ----------------------------
-SCRIPTS         = stopNsStatisticsService.sh
+SCRIPTS         = stopNsStats
 SCRIPTS_L       =
 
 #
@@ -75,7 +75,7 @@ TCL_SCRIPTS_L   =
 #
 # Python stuff (public and local)
 # ----------------------------
-PY_SCRIPTS         = testSupplier.py testConsumer.py NsStatisticsServiceTest.py
+PY_SCRIPTS         = TSupplier.py TConsumer.py NsStatisticsTest.py
 PY_SCRIPTS_L       =
 
 PY_MODULES         =
