--- a/LGPL/CommonSoftware/nsStatisticsService/src/Makefile
+++ b/LGPL/CommonSoftware/nsStatisticsService/src/Makefile
@@ -66,7 +66,7 @@ lllll_OBJECTS   =
 #
 # Scripts (public and local)
 # ----------------------------
-SCRIPTS         =
+SCRIPTS         = nsStatistics
 SCRIPTS_L       =
 
 #
