ICT-3705: Changed frequency command line parameter to be in minutes instead of milliseconds. Added new command line parameter -ms to consider frequency in milliseconds. Changed logger name to nsStatistics. Updated tests according to latest changes.
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@214021 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/nsStatisticsService/test/Makefile
+++ b/LGPL/CommonSoftware/nsStatisticsService/test/Makefile
@@ -75,7 +75,7 @@ TCL_SCRIPTS_L   =
 #
 # Python stuff (public and local)
 # ----------------------------
-PY_SCRIPTS         = TSupplier.py TConsumer.py NsStatisticsTest.py
+PY_SCRIPTS         = NsStatisticsTest.py TSupplier.py TConsumer.py
 PY_SCRIPTS_L       =
 
 PY_MODULES         =
