Empty UnitTests python package removed
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@214027 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsalarmpy/test/Makefile
+++ b/LGPL/CommonSoftware/acsalarmpy/test/Makefile
@@ -42,7 +42,7 @@ PY_SCRIPTS_L       = test_Acsalarmpy \
                      test_Acsalarmpy_AlarmSystemInterface.py \
                      test_Acsalarmpy_ACSAlarmSystemInterfaceProxy.py
 
-PY_PACKAGES_L      = UnitTests
+PY_PACKAGES_L      = 
 
 
 #
