ICTJ:ICT-4457: ported to OpenDDS v3.5.1 (blindly following the notes in DDS/docs)
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@214165 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsncdds/src/Makefile
+++ b/LGPL/CommonSoftware/acsncdds/src/Makefile
@@ -52,7 +52,7 @@ LIBRARIES_L     =
 #
 # Library that provides all the core functionality of DDS Notification Channel in ACS
 acsddsnc_OBJECTS  = DDSHelperImpl DDSPublisherImpl DDSSubscriberImpl DataReaderListenerImpl acsddsncCDBPropertiesImpl
-acsddsnc_LIBS	  = OpenDDS_Dcps SimpleTcp maci
+acsddsnc_LIBS	  = OpenDDS_Dcps maci
 
 #
 # Scripts (public and local)
