Initial commit of a python script to generate java documentation with javadoc instead of doxygen
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@215090 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/acsBUILD/src/Makefile
+++ b/LGPL/acsBUILD/src/Makefile
@@ -111,8 +111,9 @@ SCRIPTS         = acsBUILDBeforeInstall.sh acsBUILDTest \
 SCRIPTS_L       = 
 
 
-PY_SCRIPTS =
+PY_SCRIPTS = acsJdocMaker
 PY_SCRIPTS_L = acsGenGlobalPythonIndex
+PY_PACKAGES = AcsJavadoc
 
 #
 # TCL scripts (public and local)
