--- a/LGPL/CommonSoftware/acscommandcenter/.classpath
+++ b/LGPL/CommonSoftware/acscommandcenter/.classpath
@@ -43,5 +43,9 @@
 	<classpathentry kind="var" path="ACSROOT/lib/cdbrdb-pojos.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/hibernate3.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/cdb_rdb.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/mockito-core-1.9.5.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/objenesis-1.2.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/hamcrest-library-1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
