Changed how to build common_scxml. From now on Maven will be used

--- a/LGPL/Tools/scxml_apache/src/Makefile
+++ b/LGPL/Tools/scxml_apache/src/Makefile
@@ -93,7 +93,7 @@ unpack:
 buildScxml :
 	@echo ". . . building apache scxml . . . "
 
-	cd $(SCXML_DIR); CLASSPATH=$(LOCAL_JARS_CLASSPATH):$(REMOTE_JARS_CLASSPATH); ant -Dbuild.sysclasspath=only jar
+	cd $(SCXML_DIR); mvn package
 	
 	cp -r --preserve=timestamps $(SCXML_DIR)/src/main/java $(SCXML_DIR)/target; cd $(SCXML_DIR)/target; mv java src
 	cd $(SCXML_DIR)/target; jar uf $(SCXML_JAR) src
