proguard-4.10 not compatible with jdk 1.8 replaced by 5.2
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@215713 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/Tools/gui/jchart2d/src/Makefile
+++ b/LGPL/Tools/gui/jchart2d/src/Makefile
@@ -76,8 +76,10 @@ unpacked:
 	@rm -rf jchart2d_tmp
 	
 # The external file jchart2d/ext/build/proguard-4.2.jar is not JDK 7 compatibile.
-# Thus we bring in the more recent proguard-4.10.jar in disguise, see http://ictjira.alma.cl/browse/ICT-1187 
-	cp proguard-4.10.jar jchart2d/ext/build/proguard-4.2.jar
+# Thus we bring in the more recent proguard-4.10.jar in disguise, see http://ictjira.alma.cl/browse/ICT-1187
+	@tar xf proguard5.2.tar.gz
+	@cp proguard5.2/lib/proguard.jar jchart2d/ext/build/proguard-4.2.jar
+	@rm -rf proguard5.2
 	
 	@touch unpacked
 
