--- a/LGPL/CommonSoftware/acsGUIs/AlarmsProfiler/project.properties
+++ b/LGPL/CommonSoftware/acsGUIs/AlarmsProfiler/project.properties
@@ -30,9 +30,9 @@ acs.jars.required  = \
   maci.jar \
   maciSchemaBindings.jar \
   logging_idl.jar \
-  jacorb-omgapi.jar \
-  jacorb.jar \
-  jacorb-services.jar \
+  jacorb-omgapi-3.6.jar \
+  jacorb-3.6.jar \
+  jacorb-services-3.6.jar \
   slf4j-acs.jar \
   slf4j-api-1.7.5.jar \
   ACSErrTypeCommon.jar \
