--- a/LGPL/CommonSoftware/acsGUIs/eventGUI/src/project.properties
+++ b/LGPL/CommonSoftware/acsGUIs/eventGUI/src/project.properties
@@ -17,9 +17,9 @@ acs.jars.plugin=alma.acs.rcp.jars_2_0_0
 
 ## The list of ACS/ALMA jars required by this RCP
 ## These jars must be found in INTROOT/ACSROOT/JACORB_HOME
-acs.jars.required  = jacorb-omgapi.jar \
- jacorb.jar \
- jacorb-services.jar \
+acs.jars.required  = jacorb-omgapi-3.6.jar \
+ jacorb-3.6.jar \
+ jacorb-services-3.6.jar \
  acsalarmSchemaBindings.jar \
  acsASsources.jar \
  acsCallbacksSupport.jar \
