--- a/LGPL/CommonSoftware/acsGUIs/AlarmsProfiler/src/project.properties
+++ b/LGPL/CommonSoftware/acsGUIs/AlarmsProfiler/src/project.properties
@@ -54,9 +54,9 @@ acs.jars.required  = \
   commons-logging-1.1.1.jar \
   commons-scxml-0.9.jar \
   CDB.jar \
-  jacorb-omgapi.jar \
-  jacorb.jar \
-  jacorb-services.jar \
+  jacorb-omgapi-3.6.jar \
+  jacorb-3.6.jar \
+  jacorb-services-3.6.jar \
   jcont.jar \
   jcontnc.jar \
   jms.jar \
