ICTJ:ICT-4745: Fixed broken Python Simulation when Dynamic Components are simulated. Added a test for this specific case
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/branches/2015-02-ACS-B/ACS@215963 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acssim/test/Makefile
+++ b/LGPL/CommonSoftware/acssim/test/Makefile
@@ -84,7 +84,8 @@ PY_SCRIPTS_L       = acssimGenericTest acssimCallbackTest acssimInParamsTest acs
 			acssimDynamicImplementation acssimUtilities \
 			acssimGoodies \
 			acssimBaseRepresentation acssimAPI acssimGUI acssimBehaviorProxy acssimCDB acssimDynamic \
-			acssimEventDispatcher acssimGenerator acssimServerRepresentation
+			acssimEventDispatcher acssimGenerator acssimServerRepresentation \
+			acssimLoadSameDynamicCompTwice
 PY_MODULES         = mastercompsim interfaceInheritance
 PY_MODULES_L       = 
 
