Added slf4j-acs.jar and slf4j-api-1.7.5.jar
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/branches/2015-02-ACS-B/ACS@216112 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsGUIs/AlarmsProfiler/src/project.properties
+++ b/LGPL/CommonSoftware/acsGUIs/AlarmsProfiler/src/project.properties
@@ -75,5 +75,7 @@ acs.jars.required  = \
   NotifyMonitoringExt.jar \
   repeatGuard.jar \
   selector-1.1.jar \
+  slf4j-acs.jar \
+  slf4j-api-1.7.5.jar \
   xalan.jar \
   xercesImpl.jar
