--- a/LGPL/CommonSoftware/repeatGuard/.classpath
+++ b/LGPL/CommonSoftware/repeatGuard/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="ws/src"/>
-	<classpathentry kind="src" path="ws/test"/>
+	<classpathentry excluding="CDB/|ref/|tatlogs/|tmp/" kind="src" path="ws/test"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsjlog.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/maciSchemaBindings.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/jACSUtil.jar"/>
