--- a/LGPL/CommonSoftware/jacsutil/config/orb.properties
+++ b/LGPL/CommonSoftware/jacsutil/config/orb.properties
@@ -194,7 +194,7 @@ jacorb.maxManagedBufSize=22
 # Size of the deferredArrayQueue. JacORB will delay transferring bytes
 # internally to the stream if the size is over this value.
 # Default is 8K and 0=off.
-jacorb.deferredArrayQueue=8
+#jacorb.deferredArrayQueue=8
 
 # Create a timer queue object that manages general timed waits using a single
 # thread to wait and notify registered callback objects at the appropriate time.
