Fixes in the CDB (enum prop still missing)
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@216225 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/monitoring/moncollect/ws/test/Makefile
+++ b/LGPL/CommonSoftware/monitoring/moncollect/ws/test/Makefile
@@ -131,7 +131,7 @@ tttlll_OBJECTS  =
 #
 # Configuration Database Files
 # ----------------------------
-CDB_SCHEMAS = 
+CDB_SCHEMAS = MCtestAlarmsComponent
 
 # 
 # IDL Files and flags
