CDB and ref added to ignore list
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@216303 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/cdb_rdb/.classpath
+++ b/LGPL/CommonSoftware/cdb_rdb/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry excluding=".cvsignore|.done_generating_classes|.done_generating_sql|Makefile|gen/" kind="src" path="src"/>
-	<classpathentry excluding=".cvsignore|Makefile|tmcdb/" kind="src" path="test"/>
+	<classpathentry excluding=".cvsignore|CDB/|Makefile|ref/|tmcdb/" kind="src" path="test"/>
 	<classpathentry kind="var" path="ACSROOT/lib/cdbErrType.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/cdbjDAL.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acserrj.jar"/>
