--- a/LGPL/CommonSoftware/acsGUIs/AlarmsProfiler/src/build.properties
+++ b/LGPL/CommonSoftware/acsGUIs/AlarmsProfiler/src/build.properties
@@ -40,7 +40,7 @@ collectingFolder=${archivePrefix}
 # value is a '&' separated list of ',' separate triples.  For example, 
 #     configs=win32,win32,x86 & linux,motif,x86
 # By default the value is *,*,*
-configs =linux, gtk, x86
+configs =linux, gtk, x86 & linux, gtk, x86_64
 #configs=win32, win32, x86 & \
 #	linux, gtk, ppc &\
 # linux, gtk, x86 & \
