ICT-4381: Reverted modifications from r217869
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@217884 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/maciidl/ws/src/Makefile
+++ b/LGPL/CommonSoftware/maciidl/ws/src/Makefile
@@ -122,7 +122,7 @@ tttlll_OBJECTS  =
 #
 # Configuration Database Files
 # ----------------------------
-CDB_SCHEMAS = Container Component HierarchicalComponent Manager LoggingConfig #Components
+CDB_SCHEMAS = Container Components Component HierarchicalComponent Manager LoggingConfig
 
 # 
 # IDL Files and flags
