ICT-3704: Merge of branch 2015-04-ACS-ICT3704-TEMP for logging statistics module configuration
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@217998 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/maci/ws/src/Makefile
+++ b/LGPL/CommonSoftware/maci/ws/src/Makefile
@@ -43,7 +43,7 @@ PROG =
 #
 # C programs (public and local)
 # -----------------------------
-EXECUTABLES     = $(PROG) maciContainer maciManagerShutdown maciContainerShutdown maciReleaseComponent maciContainerLogLevel maciComponentRefDump
+EXECUTABLES     = $(PROG) maciContainer maciManagerShutdown maciContainerShutdown maciReleaseComponent maciContainerLogLevel maciContainerLogStatsConfiguration maciComponentRefDump
 EXECUTABLES_L   = 
 
 maciContainer_OBJECTS   = maciContainer 
@@ -60,6 +60,9 @@ maciReleaseComponent_LIBS = maci
 
 maciContainerLogLevel_OBJECTS = maciContainerLogLevel
 maciContainerLogLevel_LIBS = maci
+
+maciContainerLogStatsConfiguration_OBJECTS = maciContainerLogStatsConfiguration
+maciContainerLogStatsConfiguration_LIBS = maci
 
 maciComponentRefDump_OBJECTS = maciComponentRefDump
 maciComponentRefDump_LIBS= maciClient
