Added all the jars needed to connect the ACS ComponentClient
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@219153 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsGUIs/AlarmSystemProfiler/src/project.properties
+++ b/LGPL/CommonSoftware/acsGUIs/AlarmSystemProfiler/src/project.properties
@@ -22,7 +22,9 @@ acs.jars.required  = \
   acsAlarmService.jar \
   AcsAlarmSystem.jar \
   acsASsources.jar \
+  acsCallbacksSupport.jar \
   acscomponent.jar \
+  acscommon.jar \
   acsContainerServices.jar \
   acserr.jar \
   acserrj.jar \
@@ -30,11 +32,13 @@ acs.jars.required  = \
   ACSErrTypeCommon.jar \
   ACSErrTypeCORBA.jar \
   ACSErrTypeJavaNative.jar \
+  acsErrTypeLifeCycle.jar \
   acsjlog.jar \
   acsjms.jar \
   ACSJMSMessageEntity.jar \
   acsncErrType.jar \
   acsnc.jar \
+  acsncSchemaBindings.jar \
   AcsNCTraceLogLTS.jar \
   alarmsysteminterface.jar \
   AlarmSystem.jar \
@@ -44,7 +48,11 @@ acs.jars.required  = \
   CDB.jar \
   cdbjDAL.jar \
   cmwmom.jar \
+  commons-beanutils-1.8.3.jar \
+  commons-digester-2.1.jar \
   commons-logging-1.1.1.jar \
+  commons-jexl-1.1.jar \
+  commons-scxml-0.9.jar \
   jacorb-3.6.jar \
   jacorb-omgapi-3.6.jar \
   jacorb-services-3.6.jar \
@@ -64,7 +72,9 @@ acs.jars.required  = \
   maciSchemaBindings.jar \
   NotifyExt.jar \
   NotifyMonitoringExt.jar \
+  repeatGuard.jar \
   selector-1.1.jar \
   slf4j-acs.jar \
   slf4j-api-1.7.6.jar \
+  xalan.jar \
   xercesImpl.jar
