AlarmSourceSchemaBindings.jar was still missing
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@219161 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsGUIs/AlarmSystemProfiler/src/project.properties
+++ b/LGPL/CommonSoftware/acsGUIs/AlarmSystemProfiler/src/project.properties
@@ -41,6 +41,7 @@ acs.jars.required  = \
   acsncSchemaBindings.jar \
   AcsNCTraceLogLTS.jar \
   alarmsysteminterface.jar \
+  AlarmSourceSchemaBindings.jar \
   AlarmSystem.jar \
   castor.jar \
   cdbDAL.jar \
