Moncollect tests in the process of correction/improvement. New tests cases added as well as test clarification comments.
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@219706 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/monitoring/moncollect/ws/test/Makefile
+++ b/LGPL/CommonSoftware/monitoring/moncollect/ws/test/Makefile
@@ -101,8 +101,8 @@ TCL_SCRIPTS_L   =
 # Python stuff (public and local)
 # ----------------------------
 PY_SCRIPTS         =
-PY_SCRIPTS_L       = mcTestRegisterDevice mcTestRegisterDeviceWithMultipleSerial  mcTestDeviceWithSeqAndMultipleSerial \
-                  mcTestRegisterNonCollocatedDevice \
+PY_SCRIPTS_L       = mcTestRegisterDevice mcTestRegisterDeviceWithMultipleSerial  mcTestRegisterNonCollocatedDeviceWithMultipleSerial \
+                  mcTestDeviceWithSeqAndMultipleSerial mcTestRegisterNonCollocatedDevice \
 						mcTestComponent mcTestCyclicBuffer mcTestPropertiesComponent mcTestDynEnable mcTestDynSuppress mcTestDynInterval \
                   mcTestDynSupEn mcTestAlarmsComponent mcTestArchiveDelta mcTestArchiveDeltaPercent #mcTestManualPublish mcTestManualPublishOnSuppressed
 PY_MODULES         =
