ICT-3704: Added type for statistics reporting
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@219749 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/loggingidl/ws/src/Makefile
+++ b/LGPL/CommonSoftware/loggingidl/ws/src/Makefile
@@ -134,6 +134,8 @@ IDL_FILES = logging_idl
 IDL_TAO_FLAGS = 
 USER_IDL = -I$(ACE_ROOT)/TAO
 logging_idlStubs_LIBS = TAO_DsLogAdmin TAO_DsLogAdmin_Serv TAO_DsLogAdmin_Skel
+
+ACSERRDEF = loggingErrTypes
 #
 # Jarfiles and their directories
 #
