Pass the classpath before invoking ant generate
git-svn-id: https://svn.alma.cl/p2/branches/2015-06-ACS-B/ACS@220960 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/cdb_rdb/src/Makefile
+++ b/LGPL/CommonSoftware/cdb_rdb/src/Makefile
@@ -156,7 +156,7 @@ install : install_all
 	@rm -f CreateHsqldbTables.sql
 	@cat ../config/TMCDB_swconfigcore/hsqldb/CreateHsqldbTables.sql ../config/TMCDB_swconfigext/hsqldb/CreateHsqldbTables.sql > CreateHsqldbTables.sql
 	@acsStartJava org.hsqldb.cmdline.SqlTool --rcFile sqltool.rc tmcdb CreateHsqldbTables.sql
-	@ant -verbose generate
+	@CLASSPATH="$(shell acsMakeJavaClasspath)" ant -verbose generate
 	echo "Java domain classes generated"
 	@touch .done_generating_classes
 
