--- a/LGPL/Tools/hibernate/src/Makefile
+++ b/LGPL/Tools/hibernate/src/Makefile
@@ -41,7 +41,11 @@
 #    ../lib/openorb-1.3.0.jar ../lib/openorb_tools-1.3.0.jar
 # are part of the openORB distribution, but shall NOT be installed,
 # because they would collide with JacORB
-INSTALL_FILES = ../lib/hibernate3.jar ../lib/hibernate-annotations.jar ../lib/hibernate-commons-annotations.jar ../lib/hibernate-tools.jar ../lib/freemarker.jar
+INSTALL_FILES = ../lib/hibernate3.jar \
+	../lib/hibernate-tools-3.6.0.CR1.jar \
+	../lib/hibernate-jpa-2.0-api-1.0.1.Final.jar \
+	../lib/dom4j-1.6.1.jar \
+	../lib/freemarker-2.3.23.jar
 
 #
 #>>>>> END OF standard rules
