--- a/LGPL/CommonSoftware/cdb_rdb/.classpath
+++ b/LGPL/CommonSoftware/cdb_rdb/.classpath
@@ -9,15 +9,9 @@
 	<classpathentry kind="var" path="ACSROOT/lib/acserr.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/jACSUtil.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/hsqldb.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/hibernate3.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/hibernate-annotations.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/hibernate-commons-annotations.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/hibernate-tools.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/ejb3-persistence.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/tmcdbGenerator.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/hibernate3.jar" sourcepath="/ACSROOT"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsalarmSchemaBindings.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/slf4j-api-1.7.6.jar"/>
-	<classpathentry kind="var" path="JACORB_HOME/lib/jacorb.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/ACSError.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/ACSErrTypeCommon.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/ACSErrTypeOK.jar"/>
@@ -30,12 +24,10 @@
 	<classpathentry kind="var" path="ACSROOT/lib/acscomponent.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/castor.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsjlog.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/TMCDBpojos.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/repeatGuard.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/alarm_cdb_rdb_plugin.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/lasercore.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/TMCDB_HD_plugin.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsContainerServices.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/jcont.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/xmlunit-1.3.jar"/>
@@ -44,9 +36,18 @@
 	<classpathentry kind="var" path="ACSROOT/lib/CDB.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acscommon.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/cdbrdb-pojos.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/slf4j-acs.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/jacsutil2.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/commons-math-2.1.jar"/>
+	<classpathentry kind="lib" path="lib/cdb_rdb.jar"/>
+	<classpathentry kind="lib" path="lib/cdbrdb-pojos.jar"/>
+	<classpathentry kind="var" path="JACORB_HOME/lib/jacorb-3.6.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/hibernate-jpa-2.0-api-1.0.1.Final.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/hibernate-tools-3.6.0.CR1.jar"/>
+	<classpathentry kind="var" path="JACORB_HOME/lib/endorsed/jacorb-omgapi-3.6.jar"/>
+	<classpathentry kind="var" path="INTROOT"/>
+	<classpathentry kind="var" path="INTROOT/lib/acscodegen.jar"/>
+	<classpathentry kind="var" path="INTROOT/lib/tmcdbGenerator.jar"/>
+	<classpathentry kind="var" path="INTROOT/lib/tmcdbGrammar.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
