hibernate-tools-3.6.0 is final
git-svn-id: https://svn.alma.cl/p2/branches/2015-06-ACS-B/ACS@221518 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/cdb_rdb/src/build.xml
+++ b/LGPL/CommonSoftware/cdb_rdb/src/build.xml
@@ -17,7 +17,7 @@
 	<path location="${env.ACSROOT}/lib/jACSUtil.jar" />
 	<path location="${env.ACSROOT}/lib/acserrj.jar" />
 	<path location="${env.ACSROOT}/lib/hsqldb.jar" />
-	<path location="${env.ACSROOT}/lib/hibernate-tools-3.6.0.CR1.jar" />
+	<path location="${env.ACSROOT}/lib/hibernate-tools-3.6.0.Final.jar" />
 	<path location="${env.ACSROOT}/lib/hibernate3.jar" />
 	<path location="${env.ACSROOT}/lib/freemarker-2.3.23.jar" />
 	<path location="${env.ACSROOT}/lib/tmcdbGenerator.jar" />
