ICTJ:ICT-4730: Added tool to delete channels' entries in the Naming Service for a specific Notify Service
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@222149 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsnc/ws/src/Makefile
+++ b/LGPL/CommonSoftware/acsnc/ws/src/Makefile
@@ -34,8 +34,12 @@ DEBUG=on
 
 # C programs (public and local)
 # -----------------------------
-EXECUTABLES     = 
-EXECUTABLES_L   = 
+EXECUTABLES     = acsncDelChannelsInNameS
+EXECUTABLES_L   =
+
+acsncDelChannelsInNameS_OBJECTS = acsncDelChannelsInNameS
+acsncDelChannelsInNameS_LIBS = acsutil logging
+
 
 # Includes (.h) files (public only)
 # ---------------------------------
