ICT-5840: if the installation directory does not exists (because either INTROOT/INTLIST/ACSROOT are not defined or none of them points to an existing directory), give a proper error message. Two tests have been added to verify this. (The test-suite has also been made more robust, compensating for a deficiency in tat when one changes environment variables, in particular INTROOT/INTLIST/ACSROOT)
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@222549 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/Kit/acs/test/Makefile
+++ b/LGPL/Kit/acs/test/Makefile
@@ -194,7 +194,7 @@ clean : clean_all
 	@echo " . . . clean done"
 
 clean_dist : clean_all clean_dist_all 
-	@rm -f sed.scan
+	@$(RM) sed.scan
 	@echo " . . . clean_dist done"
 
 man   : do_man 
