ICTJ:ICT-4730 Modified acsNotifyService to delete Name Service channels entries of the Notify Service that will be stopped and/or started. Added new test case to check this modification. Updated the other reference files according to this modification
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@222895 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsstartup/test/Makefile
+++ b/LGPL/CommonSoftware/acsstartup/test/Makefile
@@ -66,7 +66,7 @@ lllll_OBJECTS   =
 #
 # Scripts (public and local)
 # ----------------------------
-SCRIPTS         =
+SCRIPTS         = acsstartupCreateChannels acsstartupNotifyServices
 SCRIPTS_L       = acsstartupTATPrologue acsstartupTATEpilogue \
 	acsstartupSetEnv \
 	testAcsInstance.sh testPids.sh \
@@ -84,7 +84,7 @@ TCL_SCRIPTS_L   =
 #
 # Python stuff (public and local)
 # ----------------------------
-PY_SCRIPTS         =
+PY_SCRIPTS         = acsstartupCreateChannels.py
 PY_SCRIPTS_L       = tcpBlocker acsstartupTestLoadIFR testContainerPortLock
 
 PY_MODULES         =
