--- a/LGPL/CommonSoftware/acsdaemon/.classpath
+++ b/LGPL/CommonSoftware/acsdaemon/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="src" path="ws/test"/>
+	<classpathentry excluding="CDB/|ref/" kind="src" path="ws/test"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsdaemon.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsdaemonErrType.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/jcont.jar"/>
