--- a/LGPL/CommonSoftware/jcont/.classpath
+++ b/LGPL/CommonSoftware/jcont/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="src" path="test"/>
+	<classpathentry excluding="CDB/|ref/" kind="src" path="test"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="var" path="JACORB_HOME/lib/endorsed/jacorb-omgapi.jar"/>
 	<classpathentry kind="var" path="JACORB_HOME/lib/jacorb.jar" sourcepath="/JACORB_HOME/src"/>
