ICTJ:6118: Fixed a syntax error that forbids to invoke the callback in publishEvent
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@223906 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acspy/test/Makefile
+++ b/LGPL/CommonSoftware/acspy/test/Makefile
@@ -50,6 +50,7 @@ PY_SCRIPTS_L =	test_Acspy_Nc_CommonNC \
 		acspyTestCompReload \
 		acspyTestLoggingConsumer \
 		acspyTestSupplier \
+		acspyTestSupplierCallback \
 		acspyTestConsumer \
 		acspyTestQoSTimeout \
 		 acspyTestContainerActivationMap.py
