ICTJ:ICT-4730 Added test case to check reconnection of Python publishers when the Notify Service restarts
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@224570 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acspy/test/Makefile
+++ b/LGPL/CommonSoftware/acspy/test/Makefile
@@ -53,13 +53,14 @@ PY_SCRIPTS_L =	test_Acspy_Nc_CommonNC \
 		acspyTestSupplierCallback \
 		acspyTestConsumer \
 		acspyTestQoSTimeout \
-		 acspyTestContainerActivationMap.py
+		acspyTestContainerActivationMap.py \
+		acspyTestSupplierReconn
 
 PY_PACKAGES = acspytestImpl acspyTestQoSImpl
 
 PY_PACKAGES_L = 
 
-SCRIPTS_L = acspyTATPrologue
+SCRIPTS_L = acspyTATPrologue acspyRestartDefaultNS.sh
 
 
 #
