ICTJ:ICT-730 Added method isORBSet to ORBHelper. Modified setORB to return a boolean that indicates if ORB has been set
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@224759 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsutil/ws/test/Makefile
+++ b/LGPL/CommonSoftware/acsutil/ws/test/Makefile
@@ -55,7 +55,7 @@
 # C programs (public and local)
 # -----------------------------
 EXECUTABLES     = 
-EXECUTABLES_L   = testLLU testTmp testFindFile testPorts testAnyAide testTimeStamp
+EXECUTABLES_L   = testLLU testTmp testFindFile testPorts testAnyAide testTimeStamp testORBSet
 
 #
 # <brief description of xxxxx program>
@@ -71,6 +71,8 @@ testAnyAide_OBJECTS = testAnyAide
 testAnyAide_LIBS    = baciStubs acscommonStubs acscomponentStubs acserrStubs acsutil
 testTimeStamp_OBJECTS = testTimeStamp
 testTimeStamp_LIBS = acsutil
+testORBSet_OBJECTS = testORBSet
+testORBSet_LIBS = acsutil
 
 xxxxx_LDFLAGS   =
 xxxxx_LIBS      =
